package main

import (
	"context"
	"errors"
	"log"
	"net"
	"net/http"
	"os"
	"os/signal"
	"sync"
	"syscall"
	"time"

	"github.com/go-chi/chi/v5"
	"github.com/go-chi/chi/v5/middleware"
	"github.com/google/uuid"
	ordersV1 "github.com/rocker-crm/shared/pkg/openapi/orders/v1"
	inventoryV1 "github.com/rocker-crm/shared/pkg/proto/inventory/v1"
	paymentV1 "github.com/rocker-crm/shared/pkg/proto/payment/v1"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

const (
	httpPort          = "8081"
	inventoryAddress  = "localhost:50051"
	paymentAddress    = "localhost:50052"
	readHeaderTimeout = 5 * time.Second
	shutdownTimeout   = 10 * time.Second
	PendingPayment    = "PENDING_PAYMENT"
	PAID              = "PAID"
	CANCELLED         = "CANCELLED"
)

type OrdersStorage struct {
	mu     sync.RWMutex
	orders map[string]*ordersV1.Order
}

func NewOrdersStorage() *OrdersStorage {
	return &OrdersStorage{
		orders: make(map[string]*ordersV1.Order),
	}
}

func (s *OrdersStorage) Create(req *ordersV1.CreateOrderRequest, totalPrice float32) *ordersV1.Order {
	order := &ordersV1.Order{
		OrderUUID:  uuid.NewString(),
		UserUUID:   req.UserUUID,
		PartUuids:  req.PartUuids,
		TotalPrice: totalPrice,
		Status:     PendingPayment,
	}
	s.mu.Lock()
	defer s.mu.Unlock()
	s.orders[order.OrderUUID] = order
	return order
}

func (s *OrdersStorage) GetByUuid(uuid string) *ordersV1.Order {
	s.mu.Lock()
	defer s.mu.Unlock()
	order, ok := s.orders[uuid]
	if !ok {
		return nil
	}
	return order
}

type OrdersHandler struct {
	storage         *OrdersStorage
	inventoryClient inventoryV1.InventoryServiceClient
	paymentClient   paymentV1.PaymentServiceClient
}

func NewOrdersHandler(storage *OrdersStorage, iClient inventoryV1.InventoryServiceClient, pClient paymentV1.PaymentServiceClient) *OrdersHandler {
	return &OrdersHandler{storage, iClient, pClient}
}

func (h *OrdersHandler) CreateOrder(ctx context.Context, req *ordersV1.CreateOrderRequest) (ordersV1.CreateOrderRes, error) {
	resParts, err := h.inventoryClient.ListParts(ctx, &inventoryV1.ListPartsRequest{Filter: &inventoryV1.PartsFilter{Uuids: req.PartUuids}})
	if err != nil {
		return nil, err
	}
	if len(resParts.Parts) != len(req.PartUuids) {
		return nil, errors.New("–Ω–∞–π–¥–µ–Ω—ã –Ω–µ –≤—Å–µ –∑–∞–ø—á–∞—Å—Ç–∏, –ø—Ä–æ–≤–µ—Ä—å—Ç–µ uuid –¥–µ—Ç–∞–ª–µ–π")
	}
	var totalPrice float32

	for _, p := range resParts.Parts {
		totalPrice += p.Price
	}

	o := h.storage.Create(req, totalPrice)

	return &ordersV1.CreateOrderResponse{OrderUUID: o.OrderUUID, TotalPrice: o.TotalPrice}, nil
}

func (h *OrdersHandler) GetOrderByUuid(ctx context.Context, params ordersV1.GetOrderByUuidParams) (ordersV1.GetOrderByUuidRes, error) {
	order := h.storage.GetByUuid(params.OrderUUID)
	if order == nil {
		return &ordersV1.NotFoundError{
			Code:    http.StatusNotFound,
			Message: "–ó–∞–∫–∞–∑ —Å uuid " + params.OrderUUID + " –Ω–µ –Ω–∞–π–¥–µ–Ω!",
		}, nil
	}
	return order, nil
}

func (h *OrdersHandler) PayOrder(ctx context.Context, req *ordersV1.PayOrderRequest, params ordersV1.PayOrderParams) (ordersV1.PayOrderRes, error) {
	order := h.storage.GetByUuid(params.OrderUUID)
	if order == nil {
		return &ordersV1.NotFoundError{
			Code:    http.StatusNotFound,
			Message: "–ó–∞–∫–∞–∑ —Å uuid " + params.OrderUUID + " –Ω–µ –Ω–∞–π–¥–µ–Ω!",
		}, nil
	}

	resp, err := h.paymentClient.PayOrder(ctx, &paymentV1.PayOrderRequest{UserUuid: order.UserUUID, OrderUuid: order.OrderUUID, PaymentMethod: paymentV1.PaymentMethod(paymentV1.PaymentMethod_value[req.PaymentMethod])})
	if err != nil {
		return nil, err
	}

	order.Status = PAID
	order.TransactionUUID = ordersV1.NewOptString(resp.TransactionUuid)
	order.PaymentMethod = ordersV1.NewOptString(req.PaymentMethod)
	return &ordersV1.PayOrderResponse{TransactionUUID: order.TransactionUUID.Value}, nil
}

func (h *OrdersHandler) CancelOrder(ctx context.Context, params ordersV1.CancelOrderParams) (ordersV1.CancelOrderRes, error) {
	order := h.storage.GetByUuid(params.OrderUUID)
	if order == nil {
		return &ordersV1.NotFoundError{
			Code:    http.StatusNotFound,
			Message: "–ó–∞–∫–∞–∑ —Å uuid " + params.OrderUUID + " –Ω–µ –Ω–∞–π–¥–µ–Ω!",
		}, nil
	}

	if order.Status == PAID {
		return &ordersV1.ConflictError{}, nil
	}

	order.Status = CANCELLED
	return &ordersV1.CancelOrderNoContent{}, nil
}

func (h *OrdersHandler) NewError(_ context.Context, err error) *ordersV1.GenericErrorStatusCode {
	return &ordersV1.GenericErrorStatusCode{
		StatusCode: http.StatusInternalServerError,
		Response: ordersV1.GenericError{
			Code:    ordersV1.NewOptInt(http.StatusInternalServerError),
			Message: ordersV1.NewOptString(err.Error()),
		},
	}
}

func main() {
	// —Å–æ–∑–¥–∞–µ—Ç –∫–æ–Ω–Ω–µ–∫—Ç –¥–æ –º–∏–∫—Ä–æ—Å–µ—Ä–≤–∏—Å–∞ inventory
	connInventory, err := grpc.NewClient(inventoryAddress, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Printf("failed to connect: %v\n", err)
		return
	}

	// –ó–∞–∫—Ä—ã–≤–∞–µ–º —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ –ø–æ—Å–ª–µ –æ—Ç–∫–ª—é—á–µ–Ω–∏—è order —Å–µ—Ä–≤–∏—Å–∞, —á—Ç–æ–±—ã –Ω–µ –±—ã–ª–æ –∑–∞–≤–∏—Å—à–µ–≥–æ —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ, –∫–æ—Ç–æ—Ä–æ–µ —É–∂–µ –Ω–µ –Ω—É–∂–Ω–æ
	defer func() {
		if cerr := connInventory.Close(); cerr != nil {
			log.Printf("failed to close connect: %v", cerr)
		}
	}()

	// —Å–æ–∑–¥–∞–µ–º –∫–æ–Ω–Ω–µ–∫—Ç –¥–æ –º–∏–∫—Ä–æ—Å–µ—Ä–≤–∏—Å–∞ payment
	connPayment, err := grpc.NewClient(paymentAddress, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Printf("failed to connect: %v\n", err)
		return
	}

	// –ó–∞–∫—Ä—ã–≤–∞–µ–º —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ –ø–æ—Å–ª–µ –æ—Ç–∫–ª—é—á–µ–Ω–∏—è order —Å–µ—Ä–≤–∏—Å–∞, —á—Ç–æ–±—ã –Ω–µ –±—ã–ª–æ –∑–∞–≤–∏—Å—à–µ–≥–æ —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ, –∫–æ—Ç–æ—Ä–æ–µ —É–∂–µ –Ω–µ –Ω—É–∂–Ω–æ
	defer func() {
		if cerr := connInventory.Close(); cerr != nil {
			log.Printf("failed to close connect: %v", cerr)
		}
	}()

	// –æ–±–æ—Ä–∞—á–∏–≤–∞–µ—Ç –∫–æ–Ω–Ω–µ–∫—Ç —á—Ç–æ–±—ã —É –Ω–µ–≥–æ –±—ã–ª–∏ –º–µ—Ç–æ–¥—ã gRPC —Å–µ—Ä–≤–µ—Ä–∞, —á—Ç–æ–±—ã –º–æ–∂–Ω–æ –±—ã–ª–æ –≤—ã–∑—ã–≤–∞—Ç—å –ø—Ä–æ—Å—Ç–æ –∫–∞–∫ –º–µ—Ç–æ–¥ —Å—Ç—Ä—É–∫—Ç—É—Ä—ã –≤ go
	inventoryClient := inventoryV1.NewInventoryServiceClient(connInventory)
	// –æ–±–æ—Ä–∞—á–∏–≤–∞–µ—Ç –∫–æ–Ω–Ω–µ–∫—Ç —á—Ç–æ–±—ã —É –Ω–µ–≥–æ –±—ã–ª–∏ –º–µ—Ç–æ–¥—ã gRPC —Å–µ—Ä–≤–µ—Ä–∞, —á—Ç–æ–±—ã –º–æ–∂–Ω–æ –±—ã–ª–æ –≤—ã–∑—ã–≤–∞—Ç—å –ø—Ä–æ—Å—Ç–æ –∫–∞–∫ –º–µ—Ç–æ–¥ —Å—Ç—Ä—É–∫—Ç—É—Ä—ã –≤ go
	paymentClient := paymentV1.NewPaymentServiceClient(connPayment)

	storage := NewOrdersStorage()
	ordersHandler := NewOrdersHandler(storage, inventoryClient, paymentClient)

	ordersServer, err := ordersV1.NewServer(ordersHandler)
	if err != nil {
		log.Printf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è OpenAPI: %v", err)
		return
	}
	// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º —Ä–æ—É—Ç–µ—Ä Chi
	r := chi.NewRouter()

	// –î–æ–±–∞–≤–ª—è–µ–º middleware
	r.Use(middleware.Logger)
	r.Use(middleware.Recoverer)
	r.Use(middleware.Timeout(10 * time.Second))

	// –ú–æ–Ω—Ç–∏—Ä—É–µ–º –æ–±—Ä–∞–±–æ—Ç—á–∏–∫–∏ OpenAPI
	r.Mount("/", ordersServer)

	// –ó–∞–ø—É—Å–∫–∞–µ–º HTTP-—Å–µ—Ä–≤–µ—Ä
	server := &http.Server{
		Addr:              net.JoinHostPort("localhost", httpPort),
		Handler:           r,
		ReadHeaderTimeout: readHeaderTimeout, // –ó–∞—â–∏—Ç–∞ –æ—Ç Slowloris –∞—Ç–∞–∫ - —Ç–∏–ø DDoS-–∞—Ç–∞–∫–∏, –ø—Ä–∏ –∫–æ—Ç–æ—Ä–æ–π
		// –∞—Ç–∞–∫—É—é—â–∏–π —É–º—ã—à–ª–µ–Ω–Ω–æ –º–µ–¥–ª–µ–Ω–Ω–æ –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç HTTP-–∑–∞–≥–æ–ª–æ–≤–∫–∏, —É–¥–µ—Ä–∂–∏–≤–∞—è —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è –æ—Ç–∫—Ä—ã—Ç—ã–º–∏ –∏ –∏—Å—Ç–æ—â–∞—è
		// –ø—É–ª –¥–æ—Å—Ç—É–ø–Ω—ã—Ö —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–π –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ. ReadHeaderTimeout –ø—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ –∑–∞–∫—Ä—ã–≤–∞–µ—Ç —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ,
		// –µ—Å–ª–∏ –∫–ª–∏–µ–Ω—Ç –Ω–µ —É—Å–ø–µ–ª –æ—Ç–ø—Ä–∞–≤–∏—Ç—å –≤—Å–µ –∑–∞–≥–æ–ª–æ–≤–∫–∏ –∑–∞ –æ—Ç–≤–µ–¥–µ–Ω–Ω–æ–µ –≤—Ä–µ–º—è.
	}

	// –ó–∞–ø—É—Å–∫–∞–µ–º —Å–µ—Ä–≤–µ—Ä –≤ –æ—Ç–¥–µ–ª—å–Ω–æ–π –≥–æ—Ä—É—Ç–∏–Ω–µ
	go func() {
		log.Printf("üöÄ HTTP-—Å–µ—Ä–≤–µ—Ä –∑–∞–ø—É—â–µ–Ω –Ω–∞ –ø–æ—Ä—Ç—É %s\n", httpPort)
		err = server.ListenAndServe()
		if err != nil && !errors.Is(err, http.ErrServerClosed) {
			log.Printf("‚ùå –û—à–∏–±–∫–∞ –∑–∞–ø—É—Å–∫–∞ —Å–µ—Ä–≤–µ—Ä–∞: %v\n", err)
		}
	}()

	// Graceful shutdown
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit

	log.Println("üõë –ó–∞–≤–µ—Ä—à–µ–Ω–∏–µ —Ä–∞–±–æ—Ç—ã —Å–µ—Ä–≤–µ—Ä–∞...")

	// –°–æ–∑–¥–∞–µ–º –∫–æ–Ω—Ç–µ–∫—Å—Ç —Å —Ç–∞–π–º–∞—É—Ç–æ–º –¥–ª—è –æ—Å—Ç–∞–Ω–æ–≤–∫–∏ —Å–µ—Ä–≤–µ—Ä–∞
	ctx, cancel := context.WithTimeout(context.Background(), shutdownTimeout)
	defer cancel()

	err = server.Shutdown(ctx)
	if err != nil {
		log.Printf("‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –æ—Å—Ç–∞–Ω–æ–≤–∫–µ —Å–µ—Ä–≤–µ—Ä–∞: %v\n", err)
	}

	log.Println("‚úÖ –°–µ—Ä–≤–µ—Ä –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")
}
